# Drug-Evidence

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
data/: target_set.txt
docs/: api-calls.md
docs/latex/: backup.tex  main.tex  references.bib
legacy_v1/: legacy_v1.7z
results/target50/: aggregate.csv  arm_results.csv  metrics.csv  report.md
scripts/: phase0_prepare.py  run_250_parallel.py  stage_evidence.py  stage_missing_targets.py  subset_results.py
src/: main.py
src/agents/: __init__.py  baseline_agent.py  deps.py  evidence_agent.py  react_instructor_agent.py
src/config/: __init__.py  models.py  settings.py
src/data/: __init__.py  aggregator.py  chembl.py  ctd.py  dgidb.py  evidence_store.py  http.py  normalizer.py  opentargets.py  pharmgkb.py  pubchem.py  pubmed.py  reactome.py
src/evaluation/: accuracy.py  evidence_quality.py  false_negatives.py  sensitivity.py
src/experiment/: __init__.py  arms.py  cache.py  difficulty.py  orchestrator.py  runner.py
src/schemas/: evidence.py  prediction.py
src/vector/: chunker.py  embeddings.py  precomputed_points.py  store.py
src/viz/: export.py  plots.py  report.py
tests/: test_agents_smoke.py  test_baseline.py  test_config.py  test_data_clients.py  test_evidence_agent.py  test_evidence_quality.py  test_export.py  test_false_negatives.py  test_integration.py  test_normalizer.py  test_orchestrator.py  test_react_instructor_agent.py  test_reactome.py  test_schemas.py  test_scoring.py  test_sensitivity.py  test_vector.py  test_viz.py
(+9 files in other folders)
